--- a/src/index.css
+++ b/src/index.css
@@ -25,3 +25,113 @@ body {
 .card{
   border-radius: 20px;
 }
+
+.homepage{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+}
+
+.homepage_body{
+background-color: #fff;
+height: 100vh;
+width: 100vw;
+display: flex;
+}
+
+.homepage_sidebar{
+  flex:3.4;
+}
+
+.homepage_chatpanel{
+  flex:7.6;
+}
+
+.sidebar_head{
+  display: flex;
+  flex:1;
+  justify-content: space-between;
+  padding: 3px 1px;
+  background-color: #e9ecef;
+
+}
+
+.head_icon{
+  display: flex;
+  align-items: center;
+}
+
+.sidebar_search{
+  background-color: #d9d9d9;
+  padding: 8px 6px;
+  border-bottom: 1px solid #bfc0c0;
+}
+
+.search_container{
+background-color: white;
+}
+
+.search_container > input{
+  border: none;
+width: 100px;
+}
+
+.search_container > input:focus{
+  outline: none;
+}
+
+.search_container > input:focus::placeholder {
+  color: transparent;
+}
+
+.sidebar_chats{
+height: 100vh;
+background-color: #e9ecef;
+overflow: scroll;
+}
+
+.sidebarchat_item{
+  padding: 0 15px;
+  background-color: #e9ecef;
+  border-bottom: 0.5px solid #bfc0c0;
+}
+
+.sidebarchat_item:hover{
+  background-color: #d9d9d9;
+  cursor: pointer;
+}
+
+.avatarImg {
+  margin-right: 15px;
+  height: 50px;
+  width: 50px;
+}
+
+.chatInfo{
+  display: flex;
+  flex-direction: column;
+}
+
+/* Scrollbar */
+.sidebar_chats::-webkit-scrollbar-track
+{
+	background-color: #e9ecef;
+}
+
+.sidebar_chats::-webkit-scrollbar
+{
+	width: 5px;
+	background-color: #F5F5F5;
+}
+.sidebar_chats::-webkit-scrollbar:hover
+{
+	width: 5px;
+	background-color: #F5F5F5;
+  padding-right: 1px;
+}
+
+.sidebar_chats::-webkit-scrollbar-thumb
+{
+	background-color: gray;
+}
