--- a/src/index.css
+++ b/src/index.css
@@ -101,9 +101,13 @@ width: 100px;
 }
 
 .sidebar_chats{
-height: 100vh;
-background-color: #e9ecef;
-overflow: scroll;
+  height: 100vh;
+  overflow-wrap: normal;
+  background-color: hsl(0, 0%, 100%);
+  overflow-y: scroll;
+}
+.sidebarchat_item:last-child{
+  margin-bottom: 120px;
 }
 
 .sidebarchat_item{
@@ -127,6 +131,27 @@ overflow: scroll;
   display: flex;
   flex-direction: column;
 }
+
+.newChat{
+  background-color: #e9ecef;
+  margin: 0;
+  padding: 10px 20px;
+  border-bottom: 0.5px solid #bfc0c0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+
+.newChat h3 {
+  margin-left: 10px;
+}
+
+.newChat:hover{
+  background-color: #d9d9d9;
+  cursor: pointer;
+}
+
+
 
 /* Scrollbar */
 .sidebar_chats::-webkit-scrollbar-track
